--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "url": "git+https://github.com/KetchupGirl/NotReallyABot.git"
   },
   "dependencies": {
-    "discord.js": "10.0.1"
+    "discord.js": "^10.0.1"
   }
 }
